--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,6 @@
       <span><%= type + ' - ' + message %></span><br/>
     <% end if @messages.present? %>
       <div id="container" style="width:100%; height:400px;"></div>
-      <%= console %>
       <script>
         $(function () {
           var myChart = Highcharts.chart('container', {
@@ -25,7 +24,7 @@
               dateTimeLabelFormats: {
                 day: '%Y-%m-%d'
               },
-              categories: [<% @quotes.first[1].keys.each do |key| %> 
+              categories: [<% @quotes.first[1].keys.each do |key| %>
                            <%= "'".concat(key).concat("',").html_safe %>
                             <% end %>]
 
@@ -39,7 +38,7 @@
               <% @quotes.each_with_index do |(currency, value), i| %>{
                   <%= 'visible: false,' unless i==0 %>
                   name: "<%= currency.to_s %>",
-                  data: [<% value.each_value do |value| %> <%=value%>, <%end%>]
+                  data: [<% value.each do |date, rate| %> <%=if currency == :BRL then rate.round(2) else (@quotes[:BRL][date] / rate).round(2) end%>, <%end%>]
               },<%end%>]
           });
         });
