Changing asset resource to https on view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
       <mname="viewport" content="initial-scale=1.0, usescalable=no" />
       <title>@gchapim's Currency Chart</title>
 
-      <script src="http://code.highcharts.com/highcharts.js"></script>
+      <script src="https://code.highcharts.com/highcharts.js"></script>
     </head>
 
     <body>
