--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <mname="viewport" content="initial-scale=1.0, usescalable=no" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>@gchapim's Currency Chart</title>
 
       <script src="https://code.highcharts.com/highcharts.js"></script>
